src/test/ui/issues/issue-25826.stderr
error[E0658]: comparing raw pointers inside constant (see issue #53020)
  --> $DIR/issue-25826.rs:3:30
   |
LL |     const A: bool = unsafe { id::<u8> as *const () < id::<u16> as *const () };
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(const_compare_raw_pointers)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
